tests/elab/errors/pattern_matching/duplicate_name.pion
def f = let(x, y, x) = (1, 2, 3); x;
